--- a/association_rule_market_basket_analysis.ipynb
+++ b/association_rule_market_basket_analysis.ipynb
@@ -81,18 +81,7 @@
         "except:\n",
         "    !pip install apyori\n",
         "\n",
-        "from apyori import apriori\n",
-        "\n",
-        "# Input data files are available in the read-only \"../input/\" directory\n",
-        "# For example, running this (by clicking run or pressing Shift+Enter) will list all files under the input directory\n",
-        "\n",
-        "import os\n",
-        "for dirname, _, filenames in os.walk('/kaggle/input'):\n",
-        "    for filename in filenames:\n",
-        "        print(os.path.join(dirname, filename))\n",
-        "\n",
-        "# You can write up to 20GB to the current directory (/kaggle/working/) that gets preserved as output when you create a version using \"Save & Run All\" \n",
-        "# You can also write temporary files to /kaggle/temp/, but they won't be saved outside of the current session"
+        "from apyori import apriori"
       ],
       "execution_count": null,
       "outputs": [
